# sharepoint_back

./: .gitignore  Makefile  README.md  pyproject.toml  test_main.http
app/: main.py  sharepoint.py
settings_data/: AppPermission.xml
